--- a/src/variables.css
+++ b/src/variables.css
@@ -7,7 +7,7 @@
   --hauki-content-link-color: var(--color-coat-of-arms-blue);
   --hauki-content-border-color: #c4c4c4;
   --hauki-footer-background-color: var(--color-coat-of-arms-blue-light-20);
-  --opening-period-card-background-color: #f9f9f9;
+  --opening-period-card-background-color: #fff;
   --opening-period-card-border-color: #e0e0e0;
   --resource-opening-hours-header-background-color: var(--color-coat-of-arms-blue);
   --opening-periods-title-color: white;
