--- a/src/resource/resource-opening-hours/ResourceOpeningHours.scss
+++ b/src/resource/resource-opening-hours/ResourceOpeningHours.scss
@@ -13,7 +13,7 @@
   padding-right: $spacing-m;
 }
 
-.opening-period-header-button {
+.opening-period-header-button.opening-period-header-button {
   font-family: HelsinkiGrotesk-Medium, Arial, sans-serif;
   color: var(--opening-periods-header-button-color);
   border-color: var(--opening-periods-header-button-border-color) !important;
@@ -36,7 +36,7 @@
   background-color: var(--opening-periods-header-light-background-color);
   color: var(--opening-periods-header-light-color);
 
-  .opening-period-header-button {
+  .opening-period-header-button.opening-period-header-button {
     font-family: HelsinkiGrotesk-Medium, Arial, sans-serif;
     color: var(--opening-periods-header-light-button-color);
     border-color: var(--opening-periods-header-light-button-border-color) !important;
