Show invalid date-range error message

--- a/src/opening-period/form/OpeningPeriodForm.scss
+++ b/src/opening-period/form/OpeningPeriodForm.scss
@@ -58,15 +58,15 @@
 
 .opening-period-time-period {
   display: flex;
-  align-items: center;
 }
 
 .dash-between-begin-and-end-date {
   font-family: HelsinkiGrotesk-Bold, Arial, sans-serif;
-  margin: 2rem 10px 0;
+  margin: calc(3rem - 2px) 10px 0;
 }
 
-.opening-period-notification-text {
+.opening-period-notification-text,
+.opening-period-error-text {
   display: flex;
 
   > * + * {
